# AP-Student-AIO-Resource-Flask

./: app.py  pyproject.toml  requirements.txt
static/: style.css
templates/: classOverview.html  index.html  privPol.html
